[package]
name = "hardware_controller"
version = "0.1.0"
edition = "2024"
authors = ["Illia Kudashov s1lvefoot@proton.me"]
license = "MIT"
[dependencies]
chrono = "0.4.44"
rtlsdr = "0.1.4"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
